
[package]
name = "mavlink"
version = "0.5.1"
authors = ["Todd Stellanova", "Michal Podhradsky", "Kevin Mehall", "Tim Ryan"]
build = "build/main.rs"
description = "Implements the MAVLink data interchange format for UAVs."
license = "MIT/Apache-2.0"
repository = "https://github.com/3drobotics/rust-mavlink"

[build-dependencies]
crc16 = "0.3.3"
xml-rs = "0.2"
quote = "0.6"
rustfmt = "0.9"
lazy_static = "1.2.0"
proc-macro2 = "0.4"
syn = "0.15"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"

[[bin]]
name = "mavlink-dump"

[dependencies]
crc16 = "0.3.3"
num-traits = "0.2"
num-derive = "0.2"
bitflags = "1.0.4"
serial = { version = "0.4", optional = true }
bytes = "0.4"

[dependencies.arrayvec]
git = "https://github.com/podhrmic/arrayvec"
branch = "quickcheck"
features = ["array-sizes-33-128", "array-sizes-129-255", "quickcheck-1"] 

[dependencies.byteorder]
version = "1.3.1"
optional = true
default-features = false

[features]
"emit-description" = []
"std" = ["byteorder"]
"udp" = []
"tcp" = []
"direct-serial" = []
default= ["std", "tcp", "udp", "direct-serial", "serial"]
